external-crates/move/crates/move-compiler/tests/move_check/feature_gate/macro_definition_with_usage.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/feature_gate/macro_definition_with_usage.move:2:12
  │
2 │     public macro fun do($f: || ()) { $f() }
  │            ^^^^^ 'macro' functions are not supported by current edition 'legacy'; the '2024' edition supports this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/feature_gate/macro_definition_with_usage.move:2:38
  │
2 │     public macro fun do($f: || ()) { $f() }
  │                                      ^^^^ lambda expressions are not supported by current edition 'legacy'; the '2024' edition supports this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/feature_gate/macro_definition_with_usage.move:4:24
  │
4 │     public fun t() { do!(|| q() ) }
  │                        ^ 'macro' functions are not supported by current edition 'legacy'; the '2024' edition supports this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.
